# Quidditch-OpenGL

./: .gitignore  CMakeLists.txt  LICENSE  README.md
blend/: arrow.blend  arrow.blend1  arrow.mtl  balai.blend  balai.blend1  balai.blend2  balai.mtl  characterQuidditch.blend  characterQuidditch.blend1  characterQuidditch.blend2  character_test.blend  cube.blend  dome.blend  dome.blend1  essai2perso.blend  essai2perso.blend1  essai2perso.blend2  newperso.blend  newperso.blend1  newperso.blend2  perso.blend  persoFinal.blend  persoFinal.blend1  persoFinal.blend2  persoFinal.mtl  plane.blend  plane.blend1  snitch.blend  wood_tower.blend  wood_tower.blend1  wood_tower.blend2
include/: 3DObject.h  Broom.h  Dome.h  Drawable.h  GoldenSnitch.h  Ground.h  Input.h  Level.h  Mesh.h  ObjectsToDraw.h  Shader.h  Texture.h  ThreeDObject.h  character.h  fleche.h  level.h  obstacle.h  openglAPI.h  pave.h
lib/: Camera.h  local_install
lib/local_install/include/glm/gtx/: matrix_decompose.inl
lib/local_install/lib/pkgconfig/: assimp.pc  glfw3.pc  libglfw.pc
maps/: 1.txt
models/: balai.mtl
shaders/: arrow.f.glsl  balai.f.glsl  balai.v.glsl  character.f.glsl  character.v.glsl  fleche.f.glsl  ground.f.glsl  myOwnGLSLProg.f.glsl  myOwnGLSLProg.v.glsl  obstacle.f.glsl  snitch.f.glsl
src/: 3DObject.cpp  Broom.cpp  Dome.cpp  Drawable.cpp  GoldenSnitch.cpp  Ground.cpp  Input.cpp  Level.cpp  Mesh.cpp  ObjectsToDraw.cpp  Texture.cpp  ThreeDObject.cpp  character.cpp  fleche.cpp  level.cpp  main.cpp  myOwnOpenGLProg.cpp  obstacle.cpp  openglAPI.cpp  pave.cpp
texture/: arrow.tga  gazon.tga  over.tga  sky_texture.tga  snitch.tga  texture_peut_etre.tga
